--- a/src/components/MyRecipe/MyRecipeCSS.module.css
+++ b/src/components/MyRecipe/MyRecipeCSS.module.css
@@ -4,31 +4,25 @@
   position: relative;
   justify-content: center;
   padding-bottom: 16px;
-  /* width: 100%; */
 }
 
 .form { /* ...noSelect; */
-  background: darkmagenta !important; /* DEV */
+  /* background: darkmagenta !important; */ /* DEV */
   display: flex;
   position: relative;
-  /* width: 100%; */
   width: 90%;
   flex-direction: column;
   align-items: center;
   align-self: center;
-  /* max-width: 800px; */
   max-width: 800px;
-  /* width: 800px; */
   margin-top: 16px;
-  /* margin-bottom: 16px; */
-  /* min-width: 800px !important; */
   padding-bottom: 6px;
 
-  /* background: linear-gradient(135deg, rgba(196, 34, 147, 0.1), rgba(196, 34, 147, 0));
+  background: linear-gradient(135deg, rgba(196, 34, 147, 0.1), rgba(196, 34, 147, 0));
   backdrop-filter: blur(20px);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   border: 1px solid rgb(255, 255, 255, 0.18);
-  border-radius: 4px; */
+  border-radius: 4px;
 }
 
 .imageSearcher {
@@ -48,7 +42,6 @@
   letter-spacing: 0.15008px;
   line-height: 24px;
   margin-top: 7px;
-  /* color: antiquewhite */
   color: beige;
   width: 90%;
   text-align: center;
@@ -60,27 +53,19 @@
   letter-spacing: 0.15008px;
   line-height: 24px;
   margin-top: 7px;
-  /* color: antiquewhite */
   color: beige
 }
 
 .eachRow {
   /* ...noSelect; */
   /* background: gray; */ /* DEV */
-  /* background: rgba(128, 128, 128, 0.2); */
   margin: 6px 0px;
   display: flex;
   position: relative;
   flex-direction: row;
   margin-left: 20px;
   margin-right: 20px;
-  /* min-width: 760px; */
-  /* width: calc(100% - 40px); */
-  /* min-width: 760px; */
   width: calc(100% - 40px) !important;
-  /* width: 100%; */
-
-  
 }
 
 .eachRow:last-child { justify-content: center; }
@@ -88,40 +73,13 @@
 .text {
   display: flex;
   flex-direction: row;
-  /* color: black; */
   color: beige;
-  /* background: red; */
   background: transparent !important;
-  /* width: 12vw; */
   min-width: 113px;
   width: 113px;
   height: 56px;
-  /* background: green; */ /* DEV */
   justify-content: center;
   align-items: center;
-}
-
-/* .tooltipCenter {
-  z-index: 1
-} */
-
-.tooltipLeft {
-  z-index: 1
-}
-
-.tooltipRight {
-  z-index: 1
-}
-
-/* eachRow 80vw */
-/* (text) 12vw + 68vw (input) */
-
-.textFieldLabel {
-  /* paddingTop: 0.5px;
-  ::selection: {
-      color: red !important;
-      background: red !important;
-  } */
 }
 
 .textFieldInput {
@@ -129,12 +87,10 @@
 }
 
 .summaryContainer {
-  /* width: calc(100% - 113px) !important */
   background: salmon; /* DEV */
   display: flex;
   position: relative;
   width: 100% !important;
-  /* max-width: calc(100% - 123px) !important; */
 }
 
 .summaryContainer ::placeholder {
@@ -142,11 +98,9 @@
 }
 
 .selectContainer {
-  /* width: calc(100% - 113px) !important */
   display: flex;
   position: relative;
   width: 100% !important;
-  /* max-width: calc(100% - 123px) !important; */
 }
 
 .selectContainer ::placeholder {
@@ -156,26 +110,14 @@
 .select { /* ...noSelect; */
   display: flex;
   position: relative;
-  /* width: 100% !important; */
   background: rgba(128, 128, 128, 0.2);
   border-radius: 4px;
-  /* flex-grow: 0px !important; */
-  /* white-space: break-spaces !important; */
-  /* max-width: calc(100% - 0px) !important; */
-  /* max-width: calc(100% - 113px) !important; */
-  /* width: 100% !important; */
-  /* max-width: calc(100% - 10px) !important; */
-  /* max-width: 100% !important; */
-  /* max-width: 100% !important; */
-  /* max-width: 200px !important; */
   color: rgba(245, 245, 220, 0.85) !important /* WHEN SELECTED */
 }
 
 .selectInput {
   white-space: break-spaces !important;
-  /* white-space: normal !important; */
 }
-
 
 .select ::placeholder {
   color: rgba(245, 245, 220, 0.3) !important; /* PLACEHOLDER */
@@ -187,26 +129,15 @@
   background: rgba(128, 128, 128, 0.2);
   border-radius: 4px;
   width: 100% !important;
-  /* content: "xxx"; */
-  /* color: red !important */
-  /* color: rgba(245, 245, 220, 0.85) !important */ /* WHEN SELECTED */
-  /* content: "xxx"; */
 }
 
 .input ::placeholder {
   color: rgba(245, 245, 220, 0.3) !important; /* PLACEHOLDER */
-  /* content: "xxx" !important; */
-  /* content: "xxx" !important; */
-  /* color: red !important */
-  /* content: "xxx"; */
-  /* content: "xxx" !important; */
 }
-
 
 .inputStyle {
   color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
   caret-color: rgba(0, 0, 0, 0.87) !important;
-  /* content: "xxx" !important; */
 }
 
 .inputShownTitle {
@@ -216,9 +147,6 @@
   padding: 17px 0px 16.5px 0px !important;
   position: absolute !important;
   width: calc(100% - 113px - 28px);
-  /* width: calc(100% - 28px); */
-  /* width: 100%; */
-  /* color: rgba(245, 245, 220, 0.85) !important; */ /* WHEN WRITING */
 }
 
 .inputHiddenTitle { /* ...noSelect; */
@@ -237,8 +165,6 @@
   color: rgba(245, 245, 220, 0.3) !important; /* PLACEHOLDER */
 }
 
-
-
 .inputImage {
   color: rgba(245, 245, 220, 0.85) !important; /* HIDDEN, ONLY LABEL SHOWN */
   caret-color: rgba(0, 0, 0, 0.87) !important;
@@ -252,7 +178,6 @@
 .inputShownSummary {
   background: lightblue; /* DEV */
   display: flex;
-  /* display: flex !important; */
   flex-wrap: wrap !important; /* MULTILINE */
   white-space: pre-wrap !important; /* MULTILINE */
   overflow-wrap: break-word; /* MULTILINE */
@@ -262,7 +187,6 @@
   /* width: calc(100% - 113px - 28px); */
   width: calc(100% - 28px);
   color: transparent !important; /* NO GRAY COLOR */
-  /* color: rgba(245, 245, 220, 0.85) !important; */ /* WHEN WRITING */
 }
 
 .inputHiddenSummary {
@@ -298,7 +222,6 @@
   padding: 16.5px 0px 16.5px 0px !important;
   position: absolute !important;
   color: transparent !important; /* NO GRAY COLOR */
-  /* color: transparent !important; */
 }
 
 .inputHiddenInstructions {
@@ -326,20 +249,14 @@
 
 .inputStep {
   width: 48vw;
-  /* background: lightblue */ /* DEV */
 }
 
 .label {
-  /* color: red !important; */
   color: rgba(245, 245, 220, 0.3) !important;
-  /* background: red; */
-  /* background: rgba(128, 128, 128, 0.2); */
 }
 
 .stepsContainer {
   background: yellow; /* DEV */
-  /* width: calc(100% - 113px); */
-  /* width: calc(100% - 113px); */
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -350,12 +267,9 @@
   z-index: 1;
   display: flex;
   flex-direction: row;
-  /* width: 68vw; */
   width: 100%;
   margin-bottom: 12px;
-  /* justify-content: space-evenly; */
   justify-content: flex-start;
-  /* :last-child: {  marginBottom: 0px } */
 }
 
 .eachStep:last-child { margin-bottom: 0px }
@@ -363,7 +277,6 @@
 /* eachRow 80vw */
 /* (text) 12vw + 68vw (input) */
 /* (text) 12vw + 6vw (step) + 48vw (input) + 7vw (button) + 7vw (button) */
-
 
 .stepTitle {
   /* background: yellow; */ /* DEV */
@@ -389,7 +302,6 @@ BUTTON IS DISABLED */
 .buttonNewHelper {
   align-self: center;
   /* background: gray; */ /* DEV */
-  /* width: 40px; */
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -404,10 +316,6 @@ BUTTON IS DISABLED */
   min-width: 0px !important;
   min-height: 0px !important;
 }
-
-/* .buttonNew:after {
-  content: none !important
-} */
 
 .buttonNew:hover {
   background: #047a04 !important
@@ -425,7 +333,6 @@ BUTTON IS DISABLED */
   height: 36.5px;
   color: white;
   align-self: center;
-  /* padding: 0px !important; */
   min-width: 0px !important;
 }
 
@@ -446,7 +353,6 @@ BUTTON IS DISABLED */
 }
 
 .buttonClearSave {
-  /* margin: 0px 7px; */
   margin: 0px 5px !important;
 }
 
@@ -458,12 +364,7 @@ BUTTON IS DISABLED */
   color: #25252d;
   background: #f5f5f9;
   font-family: Roboto;
-  /* z-index: -1 !important; */
 }
-
-/* [class*="innerTooltip"] {
-  background: orange !important;
-} */
 
 /* BREAKPOINTS */
 /* MIN <    MED    > LAR */
