--- a/src/components/Paginate/PaginateCSS.module.css
+++ b/src/components/Paginate/PaginateCSS.module.css
@@ -1,55 +1,16 @@
 .background {
-  width: 100%;
+  background: lightblue; /* DEV */
+  /* width: 100%; */
   margin: auto;
-  /* position: sticky; */
-  /* top: 0px; */
-  /* top: 150px !important; */
-  /* height: 10vw; */
-  /* display: flex; */
-  /* position: relative; */
   flex-direction: row !important;
   z-index: 1;
-
-  
-
-  /* position: absolute; */
-  
   display: flex;
   position: sticky; /* STICKY NEEDS NO HEIGHT ON PARENT */
   top: 0px; /* WHERE STICKY SHOULD STOP */
-  width: 100%;
-  /* background-color: red; */
-
-  /* position: sticky; */
-  /* position: -webkit-sticky;  */
-  /* top: 100px; */
-
-  /* display: flex; */
-  /* position: sticky; */
-  /* position: -webkit-sticky;  */
-  /* top: 100px; */
-
-  /* flex-shrink: 0;
-  overflow: visible;
-  position: -webkit-sticky;
-  position: sticky; */
-
-  /* margin: 0;
-  overflow: visible; */
-  /* z-index: 1000000 !important; */
   justify-content: center;
   padding: 8px 0px;
-  background: blue; /* DEV */
-  /* width: fit-content; */
   align-self: center;
-  
-  /* margin-left: 50px; */ /* COMPENSATION OF PAGE COUNTER */
-  /* margin-left: max(50px, 1%); */
-  /* margin-left: max(0%, 50px); */
-  /* margin-left: min(1%, 50px); */
-  /* margin-left: max(1%, 50px); */
-  /* margin-left: max(10px, 1%); */
-  /* margin-left: 3%; */
+  /* --testWidth: 100px; */
 }
 
 #eachButton {
@@ -64,77 +25,69 @@
   line-height: 21px !important;
   border-radius: 0px;
   border: 1px solid black;
-  /* padding-top: 7px !important; */
-  /* padding: 0px !important; */
   padding: 0px !important;
-  /* margin: 0px !important; */
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   align-items: baseline;
-  /* descent-override: 15% !important; */
 }
 
 .test {
   display: flex !important;
   flex-direction: row !important;
+  background: lightcoral !important;
+  
+}
+
+.testTest {
+  background: yellow;
+  height: 20px !important;
+  /* width: 10px */
+  /* width: var(--width) */
+}
+
+.abc {
+  display: flex;
+  position: absolute;
+  --width: 100%;
+  
+  /* --testWidth: calc(100% - 1px); */
+  /* --testWidth: 100%; */
+  /* --testWidth: var(--width); */
 }
 
 .counter {
-  /* display: flex; */
-  width: 110px; /* COMPENSATED UPPER TO CENTER */
-  /* position: relative; */
+  background: lightslategray; /* DEV */
+  /* width: 110px; */ /* COMPENSATED UPPER TO CENTER */
+  /* --testWidth: 100% !important; */
+  /* --testWidth: calc(100%); */
+  /* --width: fit-content; */
+  /* --width: 100%; */
+  /* --width: 100%; */
+  /* width: fit-content; */
+  /* width: max-content; */
   flex-direction: row !important;
   display: flex;
   position: absolute;
-  color: beige;
-  background: lightslategray; /* DEV */
+  /* position: relative; */
+  color: beige !important;
   justify-content: center;
   font-weight: 500;
   justify-content: flex-start;
-  right: -110px
+  /* right: -110px; */
+  /* right: 110px; */
+  /* right: var(--testWidth) !important */
+  /* --testWidth: 100px; */
+  right: calc(var(--testWidth) * -1)
+  /* right: var(--testWidth) */
 }
 
-@media screen and (max-width: 956px) { /* LESS THAN 956px = TWO CARDS */
-  /* .background {
-    width: 450px;
-  } */
-  /* .counter {
-    position: relative !important;
-    right: unset !important;
-  } */
-}
+/* 956 - 957 */
 
-@media screen and (min-width: 957px) { /* MORE THAN 957px */
-
-}
-
-/* html:not([data-scroll='0']) header {
-  position: fixed;
-} */
-
-/* .background:not([data-scroll='200']) {
-  position: fixed;
-} */
-
-/* html:is([data-scroll='100']) {
-  .background {
-    position: fixed;
+/* LESS THAN 956px */
+@media screen and (max-width: 956px) {
+  .test {
+    /* margin-left: -110px */
+    /* --testWidth: 100px; */
+    margin-left: calc(var(--testWidth) * -1)
+    
   }
 }
- */
-
-/* html:is([data-scroll='100']) {
-  .background {
-    position: fixed
-  }
-} */
-
-/* html:not([data-scroll='0']) .background {
-  padding-top: 3em;
-} */
-
-/* html:is([data-scroll='150']) .background {
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.5);
-} */
