--- a/src/components/ServerStatus/ServerStatusCSS.module.css
+++ b/src/components/ServerStatus/ServerStatusCSS.module.css
@@ -1,12 +1,8 @@
 .background {
   /* background: red !important; */ /* DEV */
   display: flex;
-  /* position: fixed; */
   position: fixed;
   right: -280px; /* SLIDER BOX WIDTH */
-  /* top: 227px; */
-  top: 270px;
-  
   z-index: 3000;
 }
 
@@ -20,12 +16,8 @@
   min-height: 120px !important;
   height: 120px !important;
   color: darkblue;
-  /* font-size: 14px; */
   border-radius: 0px;
   background: lightblue;
-  /* :hover {
-    background: #91bfcf
-  } */
 }
 
 .buttonTypo {
@@ -61,7 +53,6 @@
 .circleBig {
   display: flex;
   flex-direction: row;
-  /* background: online ? green : red;  */
   width: 13px;
   height: 13px;
   border: 2px solid darkslategray;
@@ -72,7 +63,6 @@
 .circleSmall {
   display: flex;
   flex-direction: row;
-  /* background: red ? red : blue ? blue : green; */
   width: 10px;
   height: 10px;
   border: 2px solid darkslategray;
@@ -82,11 +72,9 @@
 
 .title {
   background: gray; /* DEV */
-/*   display: block;
-  block-size: 24px; */
   font-family: Roboto;
   letter-spacing: 0.15008px;
-  line-height: 24px;
+  line-height: 20px; /* TEST */
   margin-right: 30px;
 }
 
@@ -105,20 +93,72 @@
 /* MIN <    MED    > LAR */
 /* 424 < 425 ~ 825 > 826 */
 
-/* SMAPORT */
+/* ONLY SMAPORT */
 @media screen
 and (orientation: portrait)
-and (max-width: 424px) {
+and (max-device-width: 424px) {
   .background {
     top: 300px !important;
   }
 }
 
-/* SMALAND */
+/* ONLY SMALAND */
 @media screen
 and (orientation: landscape)
-and (max-height: 424px) {
+and (max-device-height: 424px) {
   .background {
-    top: 00px !important;
+    bottom: 0px !important;
+  }
+  .sliderBox {
+    bottom: 0px !important;
+    background: red !important;
+  }
+  #button {
+    display: flex;
+    position: fixed;
+    bottom: 10px;
+  }
+}
+
+/* ONLY MEDPORT */
+@media screen
+and (orientation: portrait)
+and (min-device-width: 425px)
+and (max-device-width: 825px) {
+  .background {
+    top: 300px !important
+    /* bottom: 50px !important; */
+  }
+  .sliderBox {
+    background: orange !important;
+  }
+}
+
+/* ONLY MEDLAND */
+@media screen
+and (orientation: landscape)
+and (min-device-height: 425px)
+and (max-device-height: 825px) {
+  .background {
+    /* top: 300px !important */
+    bottom: 50px !important;
+  }
+  .sliderBox {
+    background: orange !important;
+  }
+}
+
+/* ONLY LARPORT AND LARLAND */
+@media screen
+and (orientation: portrait)
+and (min-device-width: 825px),
+screen
+and (orientation: landscape)
+and (min-device-height: 825px) {
+  .background {
+    top: 300px !important
+  }
+  .sliderBox {
+    background: orange !important;
   }
 }
