--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 html {
   height: 100%;
   width: 100%;
+  background: gray /* COLOR SHOWN WHEN RESIZED */
 }
 
 body {
@@ -14,9 +15,11 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   overflow-x: hidden;
+  /* overflow-y: hidden; */
 }
 
 #root {
   height: 100%;
   width: 100%;
+  /* overflow-y: hidden !important; */
 }
