--- a/src/components/Detail/DetailCSS.module.css
+++ b/src/components/Detail/DetailCSS.module.css
@@ -195,6 +195,27 @@
   border: 1px solid rgb(255, 255, 255, 0.18); */
 }
 
+.loading {
+  background: rgba(138, 179, 179, 0.171);
+  display: flex;
+  /* position: absolute; */
+  position: relative;
+  flex-direction: column;
+  /* min-width: 925px; */
+  width: 100%;
+  height: 260px;
+  /* height: 4060px; */
+  align-items: center;
+  justify-content: center;
+  color: rgba(240, 248, 255, 0.726);
+  /* font-size: 87px; */
+  font-size: calc(32px + 3vw);
+  white-space:nowrap;
+  margin-top: 7px;
+  /* overflow-y: hidden !important;
+  overflow-x: hidden !important; */
+}
+
 @media screen and (max-width: 535px) { /* LESS THAN 535px */
   #editDeleteContainer {
     flex-direction: row-reverse;
