--- a/src/components/CardsMapper/CardsMapperCSS.module.css
+++ b/src/components/CardsMapper/CardsMapperCSS.module.css
@@ -1,34 +1,26 @@
 .background {
-  width: 100%; /* ADDED */
+  width: 100%;
   height: 100%;
   z-index: 0;
   display: flex;
   position: relative;
-  /* position: absolute; */
   justify-content: center;
   flex-wrap: wrap;
   align-self: center;
-  /* margin-bottom: 20px !important; */
   padding-bottom: 9px !important;
 }
 
 .notFoundOrLoading {
   background: rgba(138, 179, 179, 0.171);
   display: flex;
-  /* position: absolute; */
   position: relative;
   flex-direction: column;
-  /* min-width: 925px; */
   width: 100%;
   height: 260px;
-  /* height: 4060px; */
   align-items: center;
   justify-content: center;
   color: rgba(240, 248, 255, 0.726);
-  /* font-size: 87px; */
   font-size: calc(32px + 3vw);
   white-space:nowrap;
   margin-top: 7px;
-  /* overflow-y: hidden !important;
-  overflow-x: hidden !important; */
 }
