--- a/src/components/Error/ErrorCSS.module.css
+++ b/src/components/Error/ErrorCSS.module.css
@@ -19,7 +19,7 @@
   align-items: center;
   justify-content: center;
   width: 300px !important;
-  /* background: lightpink; */
+  /* background: lightpink; */ /* DEV */
 }
 
 .errorGif {
