--- a/src/components/ServerStatus/ServerStatusCSS.module.css
+++ b/src/components/ServerStatus/ServerStatusCSS.module.css
@@ -9,7 +9,6 @@
 #button {
   display: flex;
   position: fixed;
-  /*  ...noSelect; */
   z-index: 3001;
   min-width: 30px !important;
   width: 30px !important;
@@ -23,7 +22,6 @@
 .buttonTypo {
   display: flex;
   align-items: center;
-      /*  ...noSelect;  */
   font-family: Roboto;
   font-size: 14px;
   font-weight: 500;
@@ -44,7 +42,7 @@
 .eachRowSmall {
   display: flex;
   flex-direction: row;
-  width: 260px; /* 280 total */
+  width: 260px;
   align-items: center;
   margin-left: 20px;
   font-size: 14px;
@@ -74,7 +72,7 @@
   background: gray; /* DEV */
   font-family: Roboto;
   letter-spacing: 0.15008px;
-  line-height: 20px; /* TEST */
+  line-height: 20px;
   margin-right: 30px;
 }
 
@@ -97,18 +95,14 @@
 @media screen
 and (orientation: portrait)
 and (max-device-width: 424px) {
-  .background {
-    top: 300px !important;
-  }
+  .background { top: 300px !important }
 }
 
 /* ONLY SMALAND */
 @media screen
 and (orientation: landscape)
 and (max-device-height: 424px) {
-  .background {
-    bottom: 0px !important;
-  }
+  .background { bottom: 0px !important }
   .sliderBox {
     bottom: 0px !important;
     background: red !important;
@@ -125,13 +119,8 @@ and (max-device-height: 424px) {
 and (orientation: portrait)
 and (min-device-width: 425px)
 and (max-device-width: 825px) {
-  .background {
-    top: 300px !important
-    /* bottom: 50px !important; */
-  }
-  .sliderBox {
-    background: orange !important;
-  }
+  .background { top: 300px !important }
+  .sliderBox { background: orange !important }
 }
 
 /* ONLY MEDLAND */
@@ -139,13 +128,8 @@ and (max-device-width: 825px) {
 and (orientation: landscape)
 and (min-device-height: 425px)
 and (max-device-height: 825px) {
-  .background {
-    /* top: 300px !important */
-    bottom: 50px !important;
-  }
-  .sliderBox {
-    background: orange !important;
-  }
+  .background { bottom: 50px !important }
+  .sliderBox { background: orange !important }
 }
 
 /* ONLY LARPORT AND LARLAND */
@@ -155,10 +139,6 @@ and (min-device-width: 825px),
 screen
 and (orientation: landscape)
 and (min-device-height: 825px) {
-  .background {
-    top: 300px !important
-  }
-  .sliderBox {
-    background: orange !important;
-  }
+  .background { top: 300px !important }
+  .sliderBox { background: orange !important }
 }
