--- a/src/components/MyRecipe/MyRecipeCSS.module.css
+++ b/src/components/MyRecipe/MyRecipeCSS.module.css
@@ -1,5 +1,5 @@
 .background {
-  background: orange; /* DEV */
+  /* background: orange; */ /* DEV */
   display: flex;
   position: relative;
   justify-content: center;
@@ -7,7 +7,6 @@
 }
 
 .form {
-  /* background: darkmagenta !important; */ /* DEV */
   display: flex;
   position: relative;
   width: 90%;
@@ -17,7 +16,7 @@
   max-width: 800px;
   margin-top: 16px;
   padding-bottom: 6px;
-
+  /* background: darkmagenta !important; */ /* DEV */
   background: linear-gradient(135deg, rgba(196, 34, 147, 0.1), rgba(196, 34, 147, 0));
   backdrop-filter: blur(20px);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
@@ -28,7 +27,7 @@
 .imageSearcher {
   display: flex;
   position : relative;
-  background: antiquewhite; /* dev */
+  background: antiquewhite;
   width: 400px !important;
   height: 300px !important;
   align-items: center;
@@ -36,7 +35,7 @@
 }
 
 .createYourOwnRecipe {
-  background: orange; /* DEV */
+  /* background: orange; */ /* DEV */
   font-family: Roboto;
   letter-spacing: 0.15008px;
   line-height: 24px;
@@ -85,7 +84,7 @@
 }
 
 .summaryContainer {
-  background: salmon; /* DEV */
+  /* background: salmon; */ /* DEV */
   display: flex;
   position: relative;
   width: 100% !important;
@@ -174,7 +173,7 @@
 }
 
 .inputShownSummary {
-  background: lightblue; /* DEV */
+  /* background: lightblue; */ /* DEV */
   display: flex;
   flex-wrap: wrap !important; /* MULTILINE */
   white-space: pre-wrap !important; /* MULTILINE */
@@ -210,7 +209,7 @@
 }
 
 .inputShownInstructions {
-  background: lightblue; /* DEV */
+  /* background: lightblue; */ /* DEV */
   display: flex;
   flex-wrap: wrap !important; /* MULTILINE */
   white-space: pre-wrap !important; /* MULTILINE */
@@ -253,14 +252,14 @@
 }
 
 .stepsContainer {
-  background: yellow; /* DEV */
+  /* background: yellow; */ /* DEV */
   width: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .eachStep {
-  background: salmon !important; /* DEV */
+  /* background: salmon !important; */ /* DEV */
   z-index: 1;
   display: flex;
   flex-direction: row;
