--- a/src/components/GoogleAuth/GoogleAuthCSS.module.css
+++ b/src/components/GoogleAuth/GoogleAuthCSS.module.css
@@ -49,7 +49,7 @@
   display: flex;
   min-height: 0vh !important;
   height: 25px !important;
-  background: yellow;
+  /* background: yellow; */ /* DEV */
   white-space: nowrap;
   justify-content: flex-start;
   padding: 0px 6px !important;
