--- a/src/components/GoogleAuth/GoogleAuthCSS.module.css
+++ b/src/components/GoogleAuth/GoogleAuthCSS.module.css
@@ -1,10 +1,18 @@
 .background {
+  background: red; /* DEV */
+  /* width: 100vw; */
+  width: 100%;
+  height: 0px;
+  /* height: 10px; */
   display: flex;
   right: 0px;
   flex-direction: row;
   z-index: 4;
-  margin-right: 16px;
+  /* margin-right: 16px; */
+  margin-right: 8px;
   margin-top: 30.5px;
+  justify-content: flex-end;
+  /* max-width:100% */
 }
 
 .buttonIn {
@@ -17,7 +25,11 @@
   letter-spacing: 0.25px;
   font-family: "Google Sans", arial, sans-serif;
   font-weight: 500;
-  max-width: calc(100vw - 60.5px) !important;
+  /* max-width: calc(100vw - 60.5px) !important; */
+  /* max-width: calc(100vw - 108px) !important; */
+  /* max-width: calc(100% - 108px) !important; */
+  /* max-width: calc(100% - 108px); */
+  /* max-width: calc(100% - 116px); */
 }
 
 .buttonIn:hover {
@@ -57,9 +69,15 @@
 
 .bgOut {
   margin-left: 8px !important;
+  /* margin-right: 8px !important; */
+  /* margin: 0px 8px !important; */
+  /* margin: 0px 8px !important; */
   padding: 0vw !important;
   min-width: 0px !important;
   width: 36.5px !important;
+  height: 39px !important;
+  /* margin-right: 16px !important; */
+  
 }
 
 /* BREAKPOINTS */
@@ -77,7 +95,7 @@
 /* LESS THAN 800px */
 @media screen and (max-width: 800px) {
   .background {
-    margin-right: 8px;
+    /* margin-right: 8px; */
     margin-top: 98px;
   }
 }
@@ -85,7 +103,8 @@
 /* MORE THAN 800px */
 @media screen and (min-width: 801px) {
   .background {
-    margin-right: 16px !important;
+    /* margin-right: 16px !important; */
+    /* padding-right: 16px !important; */
     visibility: visible !important
   }
 }
