--- a/src/components/SettingsButton/SettingsButtonCSS.module.css
+++ b/src/components/SettingsButton/SettingsButtonCSS.module.css
@@ -1,4 +1,5 @@
 .background {
+  /* background: red; */ /* DEV */
   display: flex;
   position: absolute;
   right: 0px;
@@ -6,6 +7,8 @@
   z-index: 4;
   margin-right: 16px;
   margin-top: 30.5px;
+  height: 39px !important;
+  width: 39px !important;
 }
 
 .buttonIn {
@@ -27,3 +30,33 @@
 /* BREAKPOINTS */
 /* MIN <    MED    > LAR */
 /* 424 < 425 ~ 825 > 826 */
+
+/* MINPORT */
+@media screen and (orientation: portrait) and (max-width: 424px) {
+  .background {
+    left: 8px;
+    margin-top: 98px;
+    /* left: 50px;
+    margin-top: 150px; */
+  }
+}
+
+/* LESS THAN 800px */
+@media screen and (max-width: 800px) {
+  .background {
+    /* margin-right: 8px;
+    margin-top: 98px; */
+    left: 8px;
+    margin-top: 98px;
+  }
+}
+
+/* MORE THAN 800px */
+@media screen and (min-width: 801px) {
+  .background {
+    position: fixed !important;
+    left: 8px !important;
+    bottom: 8px !important;
+    visibility: visible !important
+  }
+}
