editing severals errors..

--- a/src/components/GoUp/GoUpCSS.module.css
+++ b/src/components/GoUp/GoUpCSS.module.css
@@ -1,6 +1,5 @@
 .button {
   position: fixed !important;
-  transform: rotate(90deg);
   bottom: 10px;
   background: rgba(46, 230, 163, 0.377) !important;
   box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.37) !important;
@@ -14,4 +13,8 @@
 .button:hover {
   background: rgba(45, 204, 146, 0.377) !important;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.37) !important;
+}
+
+.icon {
+  transform: rotate(135deg);
 }
