--- a/src/components/Settings/SettingsCSS.module.css
+++ b/src/components/Settings/SettingsCSS.module.css
@@ -54,7 +54,7 @@
   border-top: 0px !important;
 }
 
-.testTestTest {
+.incrementButtonIcon {
   pointer-events: none;
 }
 
@@ -138,6 +138,7 @@
 }
 
 .numberInputInput {
+  /* order: 1; */
   font-size: 0.875rem;
   font-family: inherit;
   font-weight: 400;
@@ -146,10 +147,12 @@
   background: #cfd8dc;
   border: 0px solid #eeeeee;
   box-shadow: 0px 2px 4px rgba(0,0,0, 0.05);
-  padding: 0px;
+  /* padding: 10px; */
+  padding: 0px 10px;
+  /* padding: 10px 12px; */
   outline: 0;
   min-width: 0;
-  width: 4rem;
+  width: 40px;
   text-align: center;
 }
 
@@ -198,7 +201,10 @@
 }
 
 .increment {
-  order: 1
+  order: 2;
+  /* background: rgba(0, 0, 0, 0.2) !important;
+  color: rgba(0, 0, 0, 0.2) !important;
+  cursor: default !important */
 }
 
 /* BREAKPOINTS */
