--- a/src/components/Card/CardCSS.module.css
+++ b/src/components/Card/CardCSS.module.css
@@ -1,16 +1,13 @@
-.background {
+.backgroundCard {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 225px;
   margin: 9px 9px 9px 9px;
   justify-content: center;
-  background: linear-gradient(135deg, rgba(196, 34, 147, 0.1), rgba(196, 34, 147, 0));
-  backdrop-filter: blur(20px);
-  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-  border: 1px solid rgb(255, 255, 255, 0.18);
-  border-radius: 4px;
   width: 450px;
+  border-radius: 4px;
+  border: 1px solid rgb(255, 255, 255, 0.18);
 }
 
 .editDeleteContainer {
@@ -63,28 +60,49 @@
 
 .innerTooltip {
   /* background: orange !important; */ /* DEV */
-  max-width: 70vw;
+  /* max-width: 70vw; */
+  max-width: 400px;
   color: antiquewhite;
   font-family: Roboto;
+  text-align: justify;
+  text-align-last: center;
+  line-break: anywhere;
 }
 
 #title {
+  display: flex;
   font-size: 19px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-decoration: none;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  color: antiquewhite;
   font-weight: 700 ;
   /* background: gray; */ /* DEV */
   width: 90%;
   height: 25px;
-  text-align: center;
+  /* text-align: center; */
   letter-spacing: normal;
+  justify-content: center;
+  display: table-cell;
+  text-align: center;
+  color: antiquewhite !important;
+  
+}
+
+.linkStyle {
+  text-decoration: none !important;
+  color: antiquewhite !important;
+}
+
+#innerText {
+  /* background: red; */ /* DEV */
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #text {
+  display: flex;
   font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-decoration: none;
@@ -96,6 +114,10 @@
   height: 25px;
   text-align: center;
   letter-spacing: normal;
+  /* background: gray; */ /* DEV */
+  justify-content: center;
+  display: table-cell;
+  text-align: center;
 }
 
 /* BREAKPOINTS */
@@ -104,7 +126,7 @@
 
 /* MINPORT */
 @media screen and (orientation: portrait) and (max-width: 424px) {
-  .background { width: 90% }
+  .backgroundCard { width: 90% }
   .image { width: calc(100% - 80px) }
   .editDeleteContainer { flex-direction: column-reverse }
 }
