--- a/src/components/Paginate/PaginateCSS.module.css
+++ b/src/components/Paginate/PaginateCSS.module.css
@@ -25,8 +25,13 @@
   border-radius: 0px;
   border: 1px solid black;
   padding: 0px !important;
-  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   align-items: baseline;
+  background: rgba(230, 46, 175, 0.363); /* DEFAULT COLOR */
+
+  /* background: yellow; */
+  /* background: yellow !important; */
+  /* box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37); */
+  /* box-shadow: unset; */
 }
 
 .buttonsAndHintContainer {
